--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-native-async-storage": "^0.0.1",
     "react-native-safe-area-context": "4.2.4",
     "react-native-screens": "~3.11.1",
+    "react-native-toast-message": "^2.1.5",
     "react-native-uuid": "^2.0.1",
     "react-native-web": "0.17.7"
   },
