--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "expo-updates": "~0.13.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-hook-form": "^7.34.2",
     "react-native": "0.68.2",
     "react-native-async-storage": "^0.0.1",
     "react-native-mask-input": "^1.2.1",
