--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "react-native-screens": "~3.11.1",
     "react-native-toast-message": "^2.1.5",
     "react-native-uuid": "^2.0.1",
-    "react-native-web": "0.17.7"
+    "react-native-web": "0.17.7",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
